<resources>
    <string name="app_name" translatable="false">Cut Corner</string>
    <string name="logo2">Another Logo</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="term_service">By logging in or registering, you agree to our Terms of service and Privacy policy.</string>
    <string name="loading">Loading...</string>
    <string name="customerTittle" translatable="false">CUSTOMER</string>
    <string name="barberTittle" translatable="false">BARBER</string>
    <string name="customer" translatable="false">customer</string>
    <string name="barber" translatable="false">barber</string>
    <string name="button_choose">Choose</string>
    <string name="login">Login Your Account</string>
    <string name="email">Email</string>
    <string name="hint_email">e.g. name@gmail.com</string>
    <string name="password">Password</string>
    <string name="resend_email">Resend Email Verification</string>
    <string name="or_login_with">Or Login With</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="button_login">Login</string>
    <string name="google_logo">google_logo</string>
    <string name="facebook_logo">facebook_logo</string>
    <string name="apple_logo">apple_logo</string>
    <string name="dont_have_account">Don’t have an account?</string>
    <string name="sign_here">Sign up here</string>
    <string name="onboardingImage">On Boarding Image</string>
    <string name="onboarding1">Welcome to CutCorner!</string>
    <string name="onboardingDesc1">Experience hassle-free scheduling with our streamlined system, ensuring your appointments are always on time.</string>
    <string name="onboarding2">Flexible</string>
    <string name="onboardingDesc2">Manage and book your haircut needs easily anywhere</string>
    <string name="onboarding3">Time Saving</string>
    <string name="onboardingDesc3">Secure your appointment in a few taps and make the most of your day</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="language_button">English</string>
    <string name="register_barber">Register Your Barber Account</string>
    <string name="name">Name</string>
    <string name="hint_name">Your Barber\'s Name</string>
    <string name="category">Category</string>
    <string name="address">Address</string>
    <string name="hint_address">Street. XXX</string>
    <string name="coordinate">Coordinate Location</string>
    <string name="hint_coordinate">Get coordinate from Maps</string>
    <string name="telephone">Telephone Number</string>
    <string name="hint_telephone" translatable="false">+62XXXXXXXXX</string>
    <string name="photo_barber">Photo of Barbershop</string>
    <string name="hint_photo_barber">Upload Your Image</string>
    <string name="button_continue">Continue</string>
    <string name="sign_up">Register Your Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="button_register">Register</string>
    <string name="have_account">Already have an account?</string>
    <string name="login_here">Login here</string>
    <string name="start_logo">start_logo</string>
    <string name="language_page">This is change language page</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="find_barbershop">Find barbershop</string>
    <string name="your_location">Your Location</string>
    <string name="current_location">Search your current location...</string>
    <string name="favorite">Favorite</string>
    <string name="notification">Notification</string>
    <string name="button_logout">Logout</string>
    <string name="permission_request_granted">Permission request granted</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="customer_name">Name...</string>
    <string name="customer_email">Email...</string>
    <string name="my_account">My Account</string>
    <string name="customer_number">+62XXXXXXXXX</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="barbershop_favorite">Barbershop Favorite</string>
    <string name="change_language">Change Language</string>
    <string name="themes">Themes</string>
    <string name="privacy_and_security">Privacy and Security</string>
    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_profile">My Account</string>
    <string name="leku_title_activity_location_picker">Location Picker</string>
    <string name="leku_load_location_error">Something went wrong. Please try again.</string>
    <string name="leku_no_search_results">There are no results for your search</string>
    <string name="leku_unknown_location">unknown location</string>
    <string name="leku_voice_search_promp">Search by voice…</string>
    <string name="leku_voice_search_extra_language">en-EN</string>
    <string name="leku_toolbar_action_voice_title">Voice</string>
    <string name="leku_search_hint">Search</string>
    <string name="email_format_invalid">Email Format Invalid</string>
    <string name="name_format_invalid">Name Format Invalid</string>
    <string name="address_format_invalid">Address Format Invalid</string>
    <string name="number_format_invalid">Number Format Invalid</string>
    <string name="comingsoon">ComingSoon</string>
    <string name="tittle_dialog_Loading">Loading</string>
    <string name="desc_dialog_Login">Login. Please wait...</string>
    <string name="tittle_dialogErr_Login">Error</string>
    <string name="desc_dialogErr_Login">You have been temporarily blocked by Google due to too many cancelled login attempts. Please try again later.</string>
    <string name="button_dialogErr_Login">OK</string>
    <string name="error_with">Error with :%1$s</string>
    <string name="onBack">Press again to exit</string>
    <string name="menu_load">Loading..</string>
    <string name="error_map">Error Map %1$s</string>
    <string name="desc_dialog_RegisterBarber">Preparing Map, Please wait...</string>
    <string name="desc_dialog_SignUp">Register. Please wait...</string>
    <string-array name="category_barberRegister">
        <item>Barber</item>
        <item>Salon</item>
    </string-array>
    <string name="permission_agree">Permission Agree</string>
    <string name="permission_denied">Permission Denied, cek on setting-app-CutCorner-permission to change</string>
    <string name="gps_off">Please activate the location (GPS) first</string>
    <string name="remote_place">The location is too far from residents</string>
    <string name="district">%1$s, %2$s</string>
    <string name="error_location_MenuHome">Error with network: %1$s</string>
    <string name="error_location2_MenuHome">Failed to get location. Please check your GPS or internet connection</string>
    <string name="saved">Saved to database</string>
    <string name="fail_save">Failed to upload on database</string>
    <string name="fail_connect">Failed to connect database</string>
    <string name="login_success">Login Success</string>
    <string name="not_verified">Please Verified your email! Cek on email</string>
    <string name="fail_connect_data">Failed to connect Data User</string>
    <string name="password_email_empty">Fill in Email and Password first</string>
    <string name="send_email_verif">Verification Email Sent!</string>
    <string name="verified_email">Your email has been verified! You can Log in now</string>
    <string name="fail_send_email">Send Verification Email Failed: %1$s</string>
    <string name="email_empty">Fill in email first</string>
    <string name="email_reset_password">Check your Email to reset the password!</string>
    <string name="fail_to_login">Failed to Login</string>
    <string name="login_failed_with_message">Login Failed, wrong email or password, click Forgot Password if forgotten \n %1$s</string>
    <string name="success_create_account">Check your Email and Verify your Account!</string>
    <string name="fail_save_data">Failed to save data to Realtime Database: %1$s</string>
    <string name="fail_send_verif">Failed to send verification email: %1$s</string>
    <string name="fail_create_account">Failed to create an account: %1$s</string>
    <string name="already_have_an_account">You already have an account, log in to the app</string>
    <string name="register_success">Register Success</string>
    <string name="get_the_picture_button">Get the Picture</string>
    <string name="back_from_camera">Back From Camera</string>
    <string name="flashlight">Flashlight</string>
    <string name="fail_to_show_camera">Fail to Show Camera</string>
    <string name="fail_to_take_picture">Failed to take a picture.</string>
    <string name="straight">Straight</string>
    <string name="curly">Curly</string>
    <string name="wavy">Wavy</string>
    <string name="please_select_hair_model_first">Please select hair model first</string>
    <string name="no_media_selected">No Media Selected</string>
    <string name="cut_recommendation">Hair Style Recommendation</string>
    <string name="your_face_shape_type">Your face shape type:</string>
    <string name="example_oval">Example Oval</string>
    <string name="button_back">Back</string>
    <string name="ai_tittle">Can\'t decide? \nAI CutCorner helps you choose a hairstyle according to your face shape</string>
    <string name="button_use_ai">Use AI</string>
    <string name="title_activity_barbershop">BarbershopActivity</string>
    <string name="your_image">Your Image</string>
    <string name="rate">(%1$s / 5)</string>
    <string name="image_of_barber">Image Of Barber</string>
    <string name="maps">Maps</string>
    <string name="queue_now">Current Queue</string>
    <string name="button_order">Order</string>
    <string name="reviews">Reviews</string>
    <string name="addbarbershoptofavorite">AddBarbershopToFavorite</string>
    <string name="image_classifier_failed">fail to classifier</string>
    <string name="facebook_app_id" translatable="false">3833382843605686</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1234</string>
    <string name="facebook_client_token" translatable="false">ae76bfaf69b78e831023e6f3a3e87e64</string>
    <string name="email_faceebook_already_used">Please sign in with your email and password before linking with Facebook.</string>
    <string name="accounts_linked">Accounts linked.</string>
    <string name="failed_to_link_accounts">Failed to link accounts:</string>
    <string name="review">Review</string>
    <string name="back_button">Back</string>
    <string name="model">Model:</string>
    <string name="addons">Addons:</string>
    <string name="rating">%1$s+ rating</string>
    <string name="edit_photo_profile">Edit Photo Profile</string>
    <string name="full_name">Full Name</string>
    <string name="hint_name_profile">Your Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_profile">Email Address</string>
    <string name="hint_date_profile">DD/MM/YYYY</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="hint_choose_gender">Choose Gender</string>
    <string name="button_save">Save</string>
    <string name="personal_data">Personal Data</string>
    <string name="take_from">Taking Pictures from</string>
    <string name="opencamera">Open Camera</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="reason">Reason for order cancellation</string>
    <string name="customer_is_not_on_the_spot">Customer is not on the spot</string>
    <string name="other">Other</string>
    <string name="barbershop_wants_to_close">Barbershop wants to close</string>
    <string name="oke">Oke</string>
</resources>