<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PersonalDataActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LLBackgroundTop"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/IBBack"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="35dp"
            android:background="@drawable/default_unselected_dot"
            android:contentDescription="@string/back_button"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/personal_data"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/IBBack"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LLBackgroundTop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/PBLoad"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                android:background="@drawable/bg_lottie"
                app:lottie_fileName="logo_test.json"
                app:lottie_loop="true" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/CIVProfileUser"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/logo_placeholder"
                app:civ_border_color="@color/black"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/IBEditPhoto"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/edit_photo_profile"
                android:padding="10dp"
                android:background="@drawable/default_unselected_dot"
                android:src="@drawable/ic_edit"
                app:layout_constraintBottom_toBottomOf="@+id/CIVProfileUser"
                app:layout_constraintEnd_toEndOf="@+id/CIVProfileUser" />

            <TextView
                android:id="@+id/TVFullName"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="35dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/plus_jakarta_sans_bold"
                android:text="@string/full_name"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/CIVProfileUser" />

            <com.example.cepstun.cv.CustomEditText
                android:id="@+id/ETFullName"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:autofillHints="name"
                android:background="@drawable/bg_et"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/plus_jakarta_sans"
                android:hint="@string/hint_name_profile"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLength="40"
                android:paddingHorizontal="10dp"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/TVFullName"
                app:layout_constraintStart_toStartOf="@+id/TVFullName"
                app:layout_constraintTop_toBottomOf="@+id/TVFullName" />

            <TextView
                android:id="@+id/TVPhoneNumber"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="35dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/plus_jakarta_sans_bold"
                android:text="@string/phone_number"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/ETFullName" />

            <com.example.cepstun.cv.CustomEditText
                android:id="@+id/ETPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:autofillHints="phone"
                android:background="@drawable/bg_et"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/plus_jakarta_sans"
                android:hint="@string/hint_telephone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="15"
                android:paddingHorizontal="10dp"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/TVPhoneNumber"
                app:layout_constraintStart_toStartOf="@+id/TVPhoneNumber"
                app:layout_constraintTop_toBottomOf="@+id/TVPhoneNumber" />

            <TextView
                android:id="@+id/TVEmailAddress"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="35dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/plus_jakarta_sans_bold"
                android:text="@string/email_profile"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/ETPhoneNumber" />

            <com.example.cepstun.cv.CustomEditText
                android:id="@+id/ETEmailAddress"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_et"
                android:focusable="false"
                android:clickable="false"
                android:fontFamily="@font/plus_jakarta_sans"
                android:maxLength="25"
                android:hint="@string/hint_email"
                android:paddingHorizontal="10dp"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/TVEmailAddress"
                app:layout_constraintStart_toStartOf="@+id/TVEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/TVEmailAddress" />

            <TextView
                android:id="@+id/TVDateOfBirth"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="35dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/plus_jakarta_sans_bold"
                android:text="@string/date_of_birth"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/ETEmailAddress" />

            <com.example.cepstun.cv.CustomEditText
                android:id="@+id/ETDateOfBirth"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:autofillHints="phone"
                android:background="@drawable/bg_et"
                android:clickable="false"
                android:focusable="false"
                android:fontFamily="@font/plus_jakarta_sans"
                android:hint="@string/hint_date_profile"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="25"
                android:paddingHorizontal="10dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:drawableEnd="@drawable/ic_calendar"
                app:layout_constraintEnd_toEndOf="@+id/TVDateOfBirth"
                app:layout_constraintStart_toStartOf="@+id/TVDateOfBirth"
                app:layout_constraintTop_toBottomOf="@+id/TVDateOfBirth" />

            <TextView
                android:id="@+id/TVGender"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="35dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/plus_jakarta_sans_bold"
                android:text="@string/gender"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/ETDateOfBirth" />

            <com.skydoves.powerspinner.PowerSpinnerView
                android:id="@+id/PSVGender"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_et"
                android:gravity="start"
                android:hint="@string/hint_choose_gender"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/TVGender"
                app:layout_constraintStart_toStartOf="@+id/TVGender"
                app:layout_constraintTop_toBottomOf="@+id/TVGender"
                app:spinner_arrow_gravity="end"
                app:spinner_arrow_padding="8dp"
                app:spinner_arrow_tint="@color/black"
                app:spinner_divider_color="@color/black"
                app:spinner_divider_show="true"
                app:spinner_divider_size="0.4dp"
                app:spinner_item_array="@array/category_profileGender"
                app:spinner_item_height="46dp"
                app:spinner_popup_animation="dropdown"
                app:spinner_popup_background="@drawable/bg_dropdown"
                app:spinner_popup_elevation="14dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/BSave"
                android:layout_width="355dp"
                android:layout_height="44dp"
                android:background="@drawable/bg_login"
                android:fontFamily="@font/plus_jakarta_sans_bold"
                android:text="@string/button_save"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PSVGender" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>