<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        style="@style/CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/TVTitleReason"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/reason"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/CVCustomerIsNotOnSpot"
                style="@style/CardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintStart_toStartOf="@+id/TVTitleReason"
                app:layout_constraintTop_toBottomOf="@+id/TVTitleReason">

                <TextView
                    android:id="@+id/TVCustomerIsNotOnSpot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/plus_jakarta_sans"
                    android:padding="10dp"
                    android:text="@string/customer_is_not_on_the_spot" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/CVBarbershopClose"
                style="@style/CardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintStart_toStartOf="@+id/TVTitleReason"
                app:layout_constraintTop_toBottomOf="@+id/CVCustomerIsNotOnSpot">

                <TextView
                    android:id="@+id/TVBarbershopClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/plus_jakarta_sans"
                    android:padding="10dp"
                    android:text="@string/barbershop_wants_to_close" />
            </com.google.android.material.card.MaterialCardView>

            <EditText
                android:id="@+id/ETOtherReason"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_et"
                android:fontFamily="@font/plus_jakarta_sans"
                android:hint="@string/other"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxLines="2"
                android:padding="10dp"
                android:scrollHorizontally="false"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/CVBarbershopClose"
                app:layout_constraintTop_toBottomOf="@+id/CVBarbershopClose" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/MBOke"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_login"
                android:text="@string/oke"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="@+id/ETOtherReason"
                app:layout_constraintTop_toBottomOf="@+id/ETOtherReason" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>